优化游戏界面设计 - 更现代的配色、动画和交互效果

--- a/1024game.html
+++ b/1024game.html
@@ -12,22 +12,29 @@
         }
 
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             padding: 20px;
+            animation: bgShift 15s ease infinite;
+        }
+
+        @keyframes bgShift {
+            0%, 100% { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); }
+            50% { background: linear-gradient(135deg, #764ba2 0%, #667eea 100%); }
         }
 
         .container {
-            background: rgba(255, 255, 255, 0.95);
-            border-radius: 20px;
-            padding: 30px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            max-width: 500px;
+            background: rgba(255, 255, 255, 0.98);
+            border-radius: 30px;
+            padding: 40px;
+            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.25);
+            max-width: 520px;
             width: 100%;
+            backdrop-filter: blur(10px);
         }
 
         .header {
@@ -36,10 +43,15 @@
         }
 
         h1 {
-            color: #333;
-            font-size: 2.5em;
-            margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
+            color: #2d3748;
+            font-size: 3.5em;
+            margin-bottom: 15px;
+            font-weight: 800;
+            letter-spacing: -2px;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
         }
 
         .info {
@@ -53,23 +65,33 @@
         .score-box, .best-box {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 15px 25px;
-            border-radius: 10px;
+            padding: 20px 30px;
+            border-radius: 15px;
             text-align: center;
-            min-width: 120px;
+            min-width: 130px;
+            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .score-box:hover, .best-box:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 35px rgba(102, 126, 234, 0.4);
         }
 
         .score-box label, .best-box label {
             display: block;
-            font-size: 0.9em;
-            opacity: 0.9;
-            margin-bottom: 5px;
+            font-size: 0.85em;
+            opacity: 0.95;
+            margin-bottom: 8px;
+            font-weight: 600;
+            letter-spacing: 0.5px;
         }
 
         .score-box span, .best-box span {
             display: block;
-            font-size: 1.8em;
-            font-weight: bold;
+            font-size: 2.2em;
+            font-weight: 800;
+            letter-spacing: -1px;
         }
 
         .buttons {
@@ -80,98 +102,108 @@
 
         button {
             flex: 1;
-            padding: 12px;
+            padding: 14px 20px;
             border: none;
-            border-radius: 8px;
-            font-size: 1em;
-            font-weight: bold;
+            border-radius: 12px;
+            font-size: 1.05em;
+            font-weight: 700;
             cursor: pointer;
             transition: all 0.3s ease;
+            letter-spacing: 0.5px;
         }
 
         .btn-new {
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
+            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.3);
         }
 
         .btn-new:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(102, 126, 234, 0.4);
+            transform: translateY(-3px);
+            box-shadow: 0 15px 35px rgba(102, 126, 234, 0.4);
+        }
+
+        .btn-new:active {
+            transform: translateY(-1px);
         }
 
         .btn-undo {
-            background: #f0f0f0;
-            color: #333;
-            border: 2px solid #ddd;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            color: #2d3748;
+            font-weight: 700;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
-        .btn-undo:hover {
-            background: #e0e0e0;
+        .btn-undo:hover:not(:disabled) {
+            transform: translateY(-3px);
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
         }
 
         .btn-undo:disabled {
-            opacity: 0.5;
+            opacity: 0.4;
             cursor: not-allowed;
         }
 
         .game-board {
-            background: #bbada0;
-            border-radius: 10px;
-            padding: 10px;
+            background: linear-gradient(135deg, #e8d5c4 0%, #d4c5b9 100%);
+            border-radius: 15px;
+            padding: 12px;
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 10px;
-            margin-bottom: 20px;
+            gap: 12px;
+            margin-bottom: 25px;
             aspect-ratio: 1;
+            box-shadow: inset 0 5px 15px rgba(0, 0, 0, 0.1);
         }
 
         .tile {
-            background: #cdc1b4;
-            border-radius: 5px;
+            background: #d4c5b9;
+            border-radius: 10px;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 2em;
-            font-weight: bold;
+            font-size: 2.2em;
+            font-weight: 800;
             color: #776e65;
             transition: all 0.15s ease-in-out;
             position: relative;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+            letter-spacing: -1px;
         }
 
         .tile.new {
-            animation: pop 0.2s ease-in-out;
+            animation: pop 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
         @keyframes pop {
-            0% { transform: scale(0.8); }
+            0% { transform: scale(0.5); opacity: 0; }
             50% { transform: scale(1.1); }
-            100% { transform: scale(1); }
+            100% { transform: scale(1); opacity: 1; }
         }
 
         .tile.merged {
-            animation: merge 0.2s ease-in-out;
+            animation: merge 0.25s cubic-bezier(0.34, 1.56, 0.64, 1);
         }
 
         @keyframes merge {
             0% { transform: scale(1); }
-            50% { transform: scale(1.15); }
+            50% { transform: scale(1.2); }
             100% { transform: scale(1); }
         }
 
-        .tile-2 { background: #eee4da; color: #776e65; }
-        .tile-4 { background: #ede0c8; color: #776e65; }
-        .tile-8 { background: #f2b179; color: #f9f6f2; }
-        .tile-16 { background: #f59563; color: #f9f6f2; }
-        .tile-32 { background: #f67c5f; color: #f9f6f2; }
-        .tile-64 { background: #f65e3b; color: #f9f6f2; }
-        .tile-128 { background: #edcf72; color: #095f6b; font-size: 1.5em; }
-        .tile-256 { background: #edcc61; color: #095f6b; font-size: 1.5em; }
-        .tile-512 { background: #edc850; color: #095f6b; font-size: 1.5em; }
-        .tile-1024 { background: #edc53f; color: #095f6b; font-size: 1.3em; }
-        .tile-2048 { background: #3c3c2f; color: #f9f6f2; font-size: 1.3em; }
-
-        .tile-4096 { background: #2c2c1f; color: #f9f6f2; font-size: 1.2em; }
-        .tile-8192 { background: #1c1c0f; color: #f9f6f2; font-size: 1.2em; }
+        .tile-2 { background: linear-gradient(135deg, #eee4da 0%, #e8dcc8 100%); color: #776e65; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08); }
+        .tile-4 { background: linear-gradient(135deg, #ede0c8 0%, #e7d4b8 100%); color: #776e65; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1); }
+        .tile-8 { background: linear-gradient(135deg, #f2b179 0%, #ec9e63 100%); color: #f9f6f2; box-shadow: 0 5px 15px rgba(242, 177, 121, 0.3); }
+        .tile-16 { background: linear-gradient(135deg, #f59563 0%, #f07a4d 100%); color: #f9f6f2; box-shadow: 0 5px 15px rgba(245, 149, 99, 0.3); }
+        .tile-32 { background: linear-gradient(135deg, #f67c5f 0%, #f05a47 100%); color: #f9f6f2; box-shadow: 0 5px 15px rgba(246, 124, 95, 0.3); }
+        .tile-64 { background: linear-gradient(135deg, #f65e3b 0%, #e63f1f 100%); color: #f9f6f2; box-shadow: 0 5px 15px rgba(246, 94, 59, 0.3); }
+        .tile-128 { background: linear-gradient(135deg, #edcf72 0%, #e8c55c 100%); color: #095f6b; font-size: 1.8em; box-shadow: 0 5px 15px rgba(237, 207, 114, 0.3); }
+        .tile-256 { background: linear-gradient(135deg, #edcc61 0%, #e8c94a 100%); color: #095f6b; font-size: 1.8em; box-shadow: 0 5px 15px rgba(237, 204, 97, 0.3); }
+        .tile-512 { background: linear-gradient(135deg, #edc850 0%, #e8c539 100%); color: #095f6b; font-size: 1.8em; box-shadow: 0 5px 15px rgba(237, 200, 80, 0.3); }
+        .tile-1024 { background: linear-gradient(135deg, #edc53f 0%, #e8c228 100%); color: #095f6b; font-size: 1.5em; box-shadow: 0 5px 15px rgba(237, 197, 63, 0.3); }
+        .tile-2048 { background: linear-gradient(135deg, #3c3c2f 0%, #2a2a1f 100%); color: #f9f6f2; font-size: 1.5em; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4); }
+        .tile-4096 { background: linear-gradient(135deg, #2c2c1f 0%, #1a1a0f 100%); color: #f9f6f2; font-size: 1.3em; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5); }
+        .tile-8192 { background: linear-gradient(135deg, #1c1c0f 0%, #0a0a00 100%); color: #f9f6f2; font-size: 1.3em; box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6); }
 
         .game-over {
             display: none;
@@ -180,28 +212,36 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0, 0, 0, 0.6);
             justify-content: center;
             align-items: center;
             z-index: 1000;
+            backdrop-filter: blur(5px);
         }
 
         .game-over.show {
             display: flex;
+            animation: fadeIn 0.3s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
 
         .game-over-content {
             background: white;
-            padding: 40px;
-            border-radius: 20px;
+            padding: 50px 40px;
+            border-radius: 25px;
             text-align: center;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
-            animation: slideUp 0.3s ease-in-out;
+            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.3);
+            animation: slideUp 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+            max-width: 400px;
         }
 
         @keyframes slideUp {
             from {
-                transform: translateY(50px);
+                transform: translateY(80px);
                 opacity: 0;
             }
             to {
@@ -211,49 +251,58 @@
         }
 
         .game-over-content h2 {
-            font-size: 2.5em;
-            color: #333;
+            font-size: 3em;
+            color: #2d3748;
             margin-bottom: 20px;
+            font-weight: 800;
         }
 
         .game-over-content p {
-            font-size: 1.2em;
-            color: #666;
-            margin-bottom: 30px;
+            font-size: 1.3em;
+            color: #4a5568;
+            margin-bottom: 35px;
+            font-weight: 600;
         }
 
         .game-over-content button {
-            padding: 15px 40px;
+            padding: 16px 50px;
             font-size: 1.1em;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             border: none;
-            border-radius: 8px;
+            border-radius: 12px;
             cursor: pointer;
             transition: all 0.3s ease;
+            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.3);
+            font-weight: 700;
+            letter-spacing: 0.5px;
         }
 
         .game-over-content button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 10px 20px rgba(102, 126, 234, 0.4);
+            transform: translateY(-3px);
+            box-shadow: 0 15px 35px rgba(102, 126, 234, 0.4);
         }
 
         .instructions {
-            background: #f5f5f5;
-            padding: 15px;
-            border-radius: 8px;
-            font-size: 0.9em;
-            color: #666;
-            line-height: 1.6;
+            background: linear-gradient(135deg, #f7fafc 0%, #edf2f7 100%);
+            padding: 20px;
+            border-radius: 12px;
+            font-size: 0.95em;
+            color: #4a5568;
+            line-height: 1.8;
+            border-left: 4px solid #667eea;
         }
 
         .instructions h3 {
-            color: #333;
-            margin-bottom: 10px;
+            color: #2d3748;
+            margin-bottom: 12px;
+            font-size: 1.1em;
+            font-weight: 700;
         }
 
         .instructions p {
-            margin-bottom: 8px;
+            margin-bottom: 10px;
+            font-weight: 500;
         }
     </style>
 </head>
